--- a/AMS-PolicySystem/frontend/package.json
+++ b/AMS-PolicySystem/frontend/package.json
@@ -6,9 +6,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2"
-  },
-  "devDependencies": {
+    "axios": "^1.6.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
