--- a/AMS-PolicySystem/backend/package.json
+++ b/AMS-PolicySystem/backend/package.json
@@ -7,14 +7,21 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
-  "keywords": ["policy", "insurance", "management", "in-memory"],
+  "keywords": [
+    "policy",
+    "insurance",
+    "management",
+    "in-memory"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
